Model V2 update Model V2, decent detection, low confidence level, loss=~20%, improvement: get more train from original source

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ pyvenv.cfg
 .idea/
 share/
 data/Logos/
-data/Logos-dev/
+data/Logos-Dev/
 src/BCC.v1-bccd.coco/
 src/bccd_coco_tfrecords/
 src/exported_model/
@@ -16,3 +16,4 @@ bizit-dev_test-data/
 src/ssd_mobilenet_v2/
 models/research/object_detection/protos/
 data/bizit-dev_train-data/
+src/output/
