--- a/src/ssd_mobilenet_v2_ft/pipeline.config
+++ b/src/ssd_mobilenet_v2_ft/pipeline.config
@@ -82,7 +82,7 @@ model {
         min_depth: 0
         max_depth: 0
         num_layers_before_predictor: 0
-        use_dropout: true
+        use_dropout: false
         dropout_keep_probability: 0.8
         kernel_size: 1
         box_code_size: 4
@@ -150,17 +150,17 @@ train_config {
       learning_rate {
         cosine_decay_learning_rate {
           learning_rate_base: 0.1
-          total_steps: 5000
+          total_steps: 10000
           warmup_learning_rate: 0.01666625
-          warmup_steps: 200
+          warmup_steps: 400
         }
       }
       momentum_optimizer_value: 0.1125
     }
     use_moving_average: false
   }
-  fine_tune_checkpoint: "/home/irizqy/ml_ws/bangkit-ws/src/ssd_mobilenet_v2_ft/checkpoint/ckpt-0"
-  num_steps: 5000
+  fine_tune_checkpoint: "/home/irizqy/ml_ws/bangkit-ws/src/based_model/checkpoint/ckpt-0"
+  num_steps: 10000
   startup_delay_steps: 0.0
   replicas_to_aggregate: 8
   max_number_of_boxes: 5
