Used EfficientNet for better performance Trained data with efficientNet for better perforamnce and experimenting on siamese network to find similarity score between images

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ data/test
 data/bizit-dev_train-data2/
 data/temp
 data/bizit-dev_train-data_combine/
+src/based_model_efficientnet/
+src/efficientnet512_ft/
+src/ssd_mobilenet_v2_ft
