Restructure Project and Add Ops for Serving combine ld and fr into one structure and adding a testing request using flask

--- a/.gitignore
+++ b/.gitignore
@@ -6,22 +6,22 @@ pyvenv.cfg
 .vscode/
 .idea/
 share/
-data/Logos/
-data/Logos-Dev/
-src/BCC.v1-bccd.coco/
-src/bccd_coco_tfrecords/
-src/exported_model/
-src/based_model
-src/trained_model/
+src/logo-detector/BCC.v1-bccd.coco/
+src/logo-detector/bccd_coco_tfrecords/
+src/logo-detector/exported_model/
+src/logo-detector/based_model
+src/logo-detector/based_model_efficientnet/
+src/logo-detector/efficientnet512_ft/
+src/logo-detector/ssd_mobilenet_v2_ft
+src/logo-detector/trained_model/
+src/logo-detector/output/
+src/logo-detector/ssd_mobilenet_v2/
 bizit-dev_test-data/
-src/ssd_mobilenet_v2/
 data/bizit-dev_train-data/
-src/output/
 data/LogoDet-3K
 data/test
 data/bizit-dev_train-data2/
 data/temp
 data/bizit-dev_train-data_combine/
-src/based_model_efficientnet/
-src/efficientnet512_ft/
-src/ssd_mobilenet_v2_ft
+data/Logos/
+data/Logos-Dev/
