test bunch in similirty images

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ src/logo-detector/trained_model/
 src/logo-detector/output/
 src/logo-detector/ssd_mobilenet_v2/
 src/logo-detector/im_similar/
+src/ops/app/model/im_similar_v1/
+src/ops/app/model/model_v1/
 bizit-dev_test-data/
 data/bizit-dev_train-data/
 data/LogoDet-3K
@@ -25,5 +27,6 @@ data/bizit-dev_train-data2/
 data/temp
 data/bizit-dev_train-data_combine/
 data/bizz.it-sim_dataset
+data/bizz.it-sim_dataset_fc
 data/Logos/
 data/Logos-Dev/
