--- a/src/ops/Dockerfile
+++ b/src/ops/Dockerfile
@@ -3,5 +3,6 @@ WORKDIR /ops
 COPY ./requirements.txt /ops/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /ops/requirements.txt
 RUN pip install 'uvicorn[standard]'
+RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
 COPY ./app /ops/app
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "3000"]
+CMD ["python", "./app/main.py"]
